kubernetes/ingress/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ingress-testing
spec:
  selector:
    name: app-pod
    app: python-app
  type: NodePort
  ports:
  - port: 5002
    targetPort: 5002
