kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: ingress-testing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: result.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port: 
              number: 5002
